--- a/day02/ds06_simpleLinkedList.ipynb
+++ b/day02/ds06_simpleLinkedList.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# file : ds06_simpleLinkedList\n",
+    "# file : ds06_simpleLinkedList.ipynb\n",
     "# desc : 단순 연결 리스트 학습"
    ]
   },
