--- a/day03/ds08_simpleLinkedList.ipynb
+++ b/day03/ds08_simpleLinkedList.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,6 +135,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "originData = ['다현', '정연', '쯔위', '사나', '지효']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'다현'"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "originData[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['정연', '쯔위', '사나', '지효']"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "originData[1:] # == originData[1:len(originData)] : 뒤를 생략"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -143,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +426,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[158], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m curr \u001b[38;5;241m=\u001b[39m head\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[43mcurr\u001b[49m\u001b[38;5;241m.\u001b[39mlink \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m     prev \u001b[38;5;241m=\u001b[39m curr\n\u001b[0;32m      5\u001b[0m     curr \u001b[38;5;241m=\u001b[39m curr\u001b[38;5;241m.\u001b[39mlink\n",
+      "Cell \u001b[1;32mIn[194], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m curr \u001b[38;5;241m=\u001b[39m head\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[43mcurr\u001b[49m\u001b[38;5;241m.\u001b[39mlink \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m     prev \u001b[38;5;241m=\u001b[39m curr\n\u001b[0;32m      5\u001b[0m     curr \u001b[38;5;241m=\u001b[39m curr\u001b[38;5;241m.\u001b[39mlink\n",
       "\u001b[1;31mNameError\u001b[0m: name 'curr' is not defined"
      ]
     }
@@ -414,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +517,7 @@
     }
    ],
    "source": [
-    "find = '정연'\n",
+    "find = '재남'\n",
     "\n",
     "curr = head # curr 사용되는 변수라서 이 작업을 항상 해줘야 함 \n",
     "if curr.data == find:\n",
@@ -479,6 +528,54 @@
     "    if curr.data == find:\n",
     "        print(curr.data)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 정리\n",
+    "- 노드검색은 파이썬 리스트, list.index(), list.count() 유사"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['다현', '정연', '쯔위', '사나', '지효']"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "originData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "originData.count('재남')"
    ]
   }
  ],
