--- a/day05/ds20_graph.ipynb
+++ b/day05/ds20_graph.ipynb
@@ -2,15 +2,615 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# file : ds20_graph.ipynb\n",
+    "# desc : 그래프 간단구현"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 자료구조와 알고리즘 \n",
+    "\n",
+    "- 그래프 구현\n",
+    "### 그래프 정점 생성\n",
+    "\n",
+    "![그래프](https://raw.githubusercontent.com/kimdongju1/ds-and-algorithm-2024/main/images/graph.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 그래프 클래스 선언, 인접행렬을 보고 \n",
+    "class Graph():\n",
+    "    SIZE = graph = None # 멤버변수\n",
+    "\n",
+    "    def __init__(self, size) -> None:\n",
+    "        self.SIZE = size\n",
+    "        self.graph = [[0 for _ in range(self.SIZE)] for _ in range(self.SIZE)] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G1 = Graph(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G1.graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       " [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       " [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       " [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       " [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]]"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 바깥쪽 리스트가 행(row), 안쪽 리스트가 열(column)\n",
+    "[[i for i in range(10)] for _ in range(5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G1 = Graph(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G1.graph[0][1] = 1 # (A, B) 간선\n",
+    "G1.graph[0][2] = 1 # (A, C) 간선\n",
+    "G1.graph[0][3] = 1 # (A, D) 간선"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1, 1, 1], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G1.graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\dev\\langs\\python311\\lib\\site-packages (2.2.0)\n",
+      "Requirement already satisfied: numpy<2,>=1.23.2 in c:\\dev\\langs\\python311\\lib\\site-packages (from pandas) (1.26.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\user\\appdata\\roaming\\python\\python311\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\dev\\langs\\python311\\lib\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\dev\\langs\\python311\\lib\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\user\\appdata\\roaming\\python\\python311\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.3.2 -> 24.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 데이터분석용 패키지 설치\n",
+    "!pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [0, 1, 1, 1]\n",
+       "1    [0, 0, 0, 0]\n",
+       "2    [0, 0, 0, 0]\n",
+       "3    [0, 0, 0, 0]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(G1.graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G1.graph[1][0] = 1 # (B, A) 간선\n",
+    "G1.graph[1][2] = 1 # (B, C) 간선\n",
+    "G1.graph[1][3] = 0 # (B, D) 간선 X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [0, 1, 1, 1]\n",
+       "1    [1, 0, 1, 0]\n",
+       "2    [0, 0, 0, 0]\n",
+       "3    [0, 0, 0, 0]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(G1.graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G1.graph[2][0] = 1 # (C, A) 간선\n",
+    "G1.graph[2][1] = 1 # (C, B) 간선\n",
+    "G1.graph[2][3] = 1 # (C, D) 간선\n",
+    "\n",
+    "G1.graph[3][0] = 1 # (D, A) 간선\n",
+    "G1.graph[3][2] = 1 # (D, C) 간선"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [0, 1, 1, 1]\n",
+       "1    [1, 0, 1, 0]\n",
+       "2    [1, 1, 0, 1]\n",
+       "3    [1, 0, 1, 0]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(G1.graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "무방향 그래프\n",
+      "0 1 1 1 \n",
+      "1 0 1 0 \n",
+      "1 1 0 1 \n",
+      "1 0 1 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "print('무방향 그래프')\n",
+    "for row in range(G1.SIZE):\n",
+    "    for col in range(G1.SIZE):\n",
+    "        print(G1.graph[row][col], end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# G3\n",
+    "G3 = Graph(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G3.graph[0][1] = 1 # <A, B> \n",
+    "G3.graph[0][2] = 1 # <A, C>\n",
+    "G3.graph[3][0] = 1 # <D, A>\n",
+    "G3.graph[3][2] = 1 # <D, C>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [0, 1, 1, 0]\n",
+       "1    [0, 0, 0, 0]\n",
+       "2    [0, 0, 0, 0]\n",
+       "3    [1, 0, 1, 0]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(G3.graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "무방향 그래프\n",
+      "0 1 1 0 \n",
+      "0 0 0 0 \n",
+      "0 0 0 0 \n",
+      "1 0 1 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "print('무방향 그래프')\n",
+    "for row in range(G3.SIZE):\n",
+    "    for col in range(G3.SIZE):\n",
+    "        print(G3.graph[row][col], end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. 그래프 개선"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 그래프 출력용 함수 \n",
+    "def printGraph(g):\n",
+    "    print('      ', end='') # 공백 6개\n",
+    "    for v in range(g.SIZE):\n",
+    "        print(nameAry[v], end=' ')\n",
+    "    print()\n",
+    "    for row in range(g.SIZE):\n",
+    "        print(nameAry[row], end=' ')\n",
+    "        for col in range(g.SIZE):\n",
+    "            print(f'   {g.graph[row][col]}', end=' ')\n",
+    "        print()\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 전역변수\n",
+    "nameAry = ['문별', '솔라', '휘인', '쯔위', '선미', '화사']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nameAry.index('휘인')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "문별 = nameAry.index('문별')\n",
+    "솔라 = nameAry.index('솔라')\n",
+    "휘인 = nameAry.index('휘인')\n",
+    "쯔위 = nameAry.index('쯔위')\n",
+    "선미 = nameAry.index('선미')\n",
+    "화사 = nameAry.index('화사')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 메인코드\n",
+    "gSize = len(nameAry)\n",
+    "G1 = Graph(gSize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G1.graph[문별][솔라] = 1; G1.graph[솔라][문별] = 1\n",
+    "G1.graph[문별][휘인] = 1; G1.graph[휘인][문별] = 1\n",
+    "G1.graph[솔라][쯔위] = 1; G1.graph[쯔위][솔라] = 1\n",
+    "G1.graph[휘인][쯔위] = 1; G1.graph[쯔위][휘인] = 1\n",
+    "G1.graph[쯔위][선미] = 1; G1.graph[선미][쯔위] = 1\n",
+    "G1.graph[문별][솔라] = 1; G1.graph[화사][쯔위] = 1\n",
+    "G1.graph[선미][화사] = 1; G1.graph[화사][선미] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "무방향 그래프 G1\n",
+      "      문별 솔라 휘인 쯔위 선미 화사 \n",
+      "문별    0    1    1    0    0    0 \n",
+      "솔라    1    0    0    1    0    0 \n",
+      "휘인    1    0    0    1    0    0 \n",
+      "쯔위    0    1    1    0    1    0 \n",
+      "선미    0    0    0    1    0    1 \n",
+      "화사    0    0    0    1    1    0 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('무방향 그래프 G1')\n",
+    "printGraph(G1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. 깊이 우선 탐색(DFS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "스택이 비었음\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 스택 준비\n",
+    "stack = [] # 파이썬 리스트가 스택 기능 대체 \n",
+    "stack.append(1) # == stack.push(1)\n",
+    "stack.pop()\n",
+    "\n",
+    "if len(stack) == 0:\n",
+    "    print('스택이 비었음')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. ASCII 출력\n",
+    "\n",
+    "![아스키](https://raw.githubusercontent.com/kimdongju1/ds-and-algorithm-2024/main/images/ascii.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 0 1 2 3 -> A B C D\n",
+    "ord('A') # ASCII 값 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D'"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chr(65 + 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'F'"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i = 3 # A\n",
+    "chr(ord('A') + i)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
